--- a/about.html
+++ b/about.html
@@ -17,7 +17,8 @@
     <br>
 
     <div class="content">
-      <img src="" alt="">
+      <img src="https://i.imgur.com/E7dokbc.jpg" style="position:relative;
+      height:30%;float:right;" alt="">
       <p>Hi, My name is UChong Cheong(張宇聰), you can call me Ricky or Ricky Cheong. I was born in 15th May 2006, live in Macau and studing in <a href="http://www.cdsj5.edu.mo/">Colégio Diocesano de São José (5ª)</a>.</p>
       <br>
       <p>I started learning C programming at the age of 14, while I change my first programming language to Python at the age of 15 because of the ease and application.</p>
