--- a/about.html
+++ b/about.html
@@ -1,9 +1,39 @@
+<!DOCTYPE html>
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style>
+      @media screen and (max-width: 650px) {
+        body {
+          font-size: 16px;
+        }
+        .content {
+          padding: 10px;
+          width: 85%;
+          height: small;
+          font-size: 80%;
+        }
+        .ending {
+          height: 35px;
+        }
+        .wf-section {
+          font-size: 120%;
+        }
+        .content h3 img {
+          width: 80%;
+          text-align: center;
+        }
+        .content img {
+          width: 30%;
+        }
+      }
+      .content p {
+        font-size: 130%;
+      }
+    </style>
   </head>
   <body> 
     <div class="wf-section">
@@ -14,23 +44,24 @@
         <li><a class="notvisit"href="./tutorial.html" data-ix="open-about-modal" aria-current="page" class="landing-link-about w--current" >Tutorial</a></li>
       </ul>
     </div>
+
     <br>
 
     <div class="content">
-      <img src="https://i.imgur.com/E7dokbc.jpg" style="position:relative;
-      height:30%;float:right;" alt="">
-      <p>Hi, My name is UChong Cheong(張宇聰), you can call me Ricky or Ricky Cheong. I was born in 15th May 2006, live in Macau and studing in <a href="http://www.cdsj5.edu.mo/">Colégio Diocesano de São José (5ª)</a>.</p>
+      <img src="https://imgur.com/Pj8w3I6.jpg" style="position:relative;width:20%;float:right;" alt="">
+      <p>Hi, My name is UChong Cheong(張宇聰), you can call me Ricky or Ricky Cheong. I was born in 15th May 2006, live in Macau and studing in <a href="http://www.cdsj5.edu.mo/">Colégio Diocesano de São José (5ª)</a>. In the September of 2024, I will study for Bachelor of Electronics and Electrical Engineering in NYCU(National Yang Ming Ciao Tong University).</p>
       <br>
-      <p>I started learning C programming at the age of 14, while I change my first programming language to Python at the age of 15 because of the ease and application.</p>
+      <p>I started learning C programming at 14. Because of future developments and applications, I began learning Python and other languages, and I discovered language is an interesting marker in our life, both communication language and code.</p>
       <br>
-      <p>My interest are programming, I am good at Python and C program, and also got some awards on that. Moreover, I have passed the cetification exam of Microsoft Office</p>
+      <p>My interest is programming and electricity. I am good at Python and C programs and have received some awards for coding. Moreover, I have passed many certification exams in Microsoft Office.</p>
       <br>
-      <p>I'm also a member of school <a href="https://cdsj5robot.com/">robot class</a>, where can prograss the coding level.</p>
-
+      <p>I'm also a member of CDSJ5 <a href="https://cdsj5robot.com/">robot class</a>, where can prograss the coding level.</p>
     </div>
+
     <br>
+
     <div class="ending">
-      <p class="said">@2023 by Ricky</p>
+      <p class="said">@2024 by Ricky</p>
       <ul>
         <li><a href="https://www.instagram.com/rickycheong0515/"><i class="fa fa-instagram"></i></a></li>
         <li><a href="https://www.facebook.com/profile.php?id=100008324179311"><i class="fa fa-facebook"></i></a></li>
