--- a/tutorial.html
+++ b/tutorial.html
@@ -1,36 +1,68 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        </head>
+  <head>
+      <link rel="stylesheet" type="text/css" href="style.css">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <style>
+        @media screen and (max-width: 650px) {
+          body {
+            font-size: 16px;
+          }
+          .content {
+            padding: 10px;
+            width: 85%;
+            height: small;
+          }
+          .ending {
+            height: 35px;
+          }
+          .wf-section {
+            font-size: 120%;
+          }
+          .content h3 img {
+            width: 80%;
+            text-align: center;
+          }
+          .content img {
+            width: 30%;
+          }
+        }
+      </style>
+    </head>
+
     <body>
-        <div class="wf-section">
-            <ul>
-                <li><a class="visiting" href="./index.html" data-ix="open-about-modal" aria-current="page" class="landing-link-about w--current" >Home</a></li>
-                <li><a class="notvisit"href="./about.html" data-ix="open-about-modal" aria-current="page" class="landing-link-about w--current" >About</a></li>
-                <li><a class="notvisit"href="./aandc.html" data-ix="open-about-modal" aria-current="page" class="landing-link-about w--current" >Award&Certification</a></li>
-                <li><a class="notvisit"href="./tutorial.html" data-ix="open-about-modal" aria-current="page" class="landing-link-about w--current" >Tutorial</a></li>
-            </ul>
-        </div>
-        <br>
-        <div class="content">
-            <div class="award">
-                <h1>COMING SOON</h1>
-            </div>
+      <div class="wf-section">
+        <ul>
+          <li><a class="visiting" href="./index.html" data-ix="open-about-modal" aria-current="page" class="landing-link-about w--current" >Home</a></li>
+          <li><a class="notvisit"href="./about.html" data-ix="open-about-modal" aria-current="page" class="landing-link-about w--current" >About</a></li>
+          <li><a class="notvisit"href="./aandc.html" data-ix="open-about-modal" aria-current="page" class="landing-link-about w--current" >Award&Certification</a></li>
+          <li><a class="notvisit"href="./tutorial.html" data-ix="open-about-modal" aria-current="page" class="landing-link-about w--current" >Tutorial</a></li>
+        </ul>
+      </div>
 
+      <br>
 
+      <div class="content">
+        <div class="award">
+          <h2>Binary tree</h2>
+          <a href="https://hackmd.io/@Ricky0515/SJJWI9jP5" target="_blank">https://hackmd.io/@Ricky0515/SJJWI9jP5</a>
+          <h2>Robot Class Summary</h2>
+          <a href="https://hackmd.io/@Ricky0515/SkOcYk7vA" target="_blank">https://hackmd.io/@Ricky0515/SkOcYk7vA</a>
         </div>
-        <br>
-        <div class="ending">
-            <p class="said">@2023 by Ricky</p>
-            <ul>
-                <li><a href="https://www.instagram.com/rickycheong0515/"><i class="fa fa-instagram"></i></a></li>
-                <li><a href="https://www.facebook.com/profile.php?id=100008324179311"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="mailto: rickycheong0515@gmail.com"><i class="fa fa-envelope"></i></a></li>
-                <li><a href="tel:+853 65605550"><i class="fa fa-phone"></i></a></li>
-            </ul>
-            </div>
+      </div>
+
+      <br>
+
+      <div class="ending">
+        <p class="said">@2024 by Ricky</p>
+        <ul>
+          <li><a href="https://www.instagram.com/rickycheong0515/"><i class="fa fa-instagram"></i></a></li>
+          <li><a href="https://www.facebook.com/profile.php?id=100008324179311"><i class="fa fa-facebook"></i></a></li>
+          <li><a href="mailto: rickycheong0515@gmail.com"><i class="fa fa-envelope"></i></a></li>
+          <li><a href="tel:+853 65605550"><i class="fa fa-phone"></i></a></li>
+        </ul>
+      </div>
     </body>
 </html>
