--- a/aandc.html
+++ b/aandc.html
@@ -35,9 +35,9 @@
     <body>
       <div class="wf-section">
         <ul>
-          <li><a class="visiting" href="./index.html" data-ix="open-about-modal" aria-current="page" class="landing-link-about w--current" >Home</a></li>
+          <li><a class="notvisit" href="./index.html" data-ix="open-about-modal" aria-current="page" class="landing-link-about w--current" >Home</a></li>
           <li><a class="notvisit"href="./about.html" data-ix="open-about-modal" aria-current="page" class="landing-link-about w--current" >About</a></li>
-          <li><a class="notvisit"href="./aandc.html" data-ix="open-about-modal" aria-current="page" class="landing-link-about w--current" >Award&Certification</a></li>
+          <li><a class="visiting"href="./aandc.html" data-ix="open-about-modal" aria-current="page" class="landing-link-about w--current" >Awards</a></li>
           <li><a class="notvisit"href="./tutorial.html" data-ix="open-about-modal" aria-current="page" class="landing-link-about w--current" >Tutorial</a></li>
         </ul>
       </div>
@@ -46,7 +46,7 @@
 
       <div class="content">
         <div class="award">
-          <h1>Award</h1>
+          <h1>Awards</h1>
           <h3><img src="https://imgur.com/UWizSLj.jpg" alt=""></h3>
           <h3>Macao Secondary Students Information Technology Knowledge Quiz Contest 2023 -- Runned-Up</h3>
           <h3><img src="https://i.imgur.com/rueEZfB.jpg" alt=""></h3>
@@ -58,7 +58,7 @@
         </div>
         <hr>
         <div class="certification">
-          <h1>Certification</h1>
+          <h1>Certifications</h1>
           <h3><img src="https://imgur.com/UsYBdm2.jpg" alt=""></h3>
           <h3>Microsoft Office Specialist 2019 Associate</h3>
           <h3><img src="https://imgur.com/YoFiRJu.jpg" alt=""></h3>
