--- a/about.html
+++ b/about.html
@@ -38,9 +38,9 @@
   <body> 
     <div class="wf-section">
       <ul>
-        <li><a class="visiting" href="./index.html" data-ix="open-about-modal" aria-current="page" class="landing-link-about w--current" >Home</a></li>
-        <li><a class="notvisit"href="./about.html" data-ix="open-about-modal" aria-current="page" class="landing-link-about w--current" >About</a></li>
-        <li><a class="notvisit"href="./aandc.html" data-ix="open-about-modal" aria-current="page" class="landing-link-about w--current" >Award&Certification</a></li>
+        <li><a class="notvisit" href="./index.html" data-ix="open-about-modal" aria-current="page" class="landing-link-about w--current" >Home</a></li>
+        <li><a class="visiting"href="./about.html" data-ix="open-about-modal" aria-current="page" class="landing-link-about w--current" >About</a></li>
+        <li><a class="notvisit"href="./aandc.html" data-ix="open-about-modal" aria-current="page" class="landing-link-about w--current" >Awards</a></li>
         <li><a class="notvisit"href="./tutorial.html" data-ix="open-about-modal" aria-current="page" class="landing-link-about w--current" >Tutorial</a></li>
       </ul>
     </div>
