--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <ul>
         <li><a class="visiting" href="./index.html" data-ix="open-about-modal" aria-current="page" class="landing-link-about w--current" >Home</a></li>
         <li><a class="notvisit"href="./about.html" data-ix="open-about-modal" aria-current="page" class="landing-link-about w--current" >About</a></li>
-        <li><a class="notvisit"href="./aandc.html" data-ix="open-about-modal" aria-current="page" class="landing-link-about w--current" >Award&Certification</a></li>
+        <li><a class="notvisit"href="./aandc.html" data-ix="open-about-modal" aria-current="page" class="landing-link-about w--current" >Awards</a></li>
         <li><a class="notvisit"href="./tutorial.html" data-ix="open-about-modal" aria-current="page" class="landing-link-about w--current" >Tutorial</a></li>
       </ul>
     </div>
@@ -54,13 +54,17 @@
       <br>
 
       <ul>
-        <li><a href="https://www.cpttm.org.mo/smta/certification-and-examination/mos/" target="_blank">Microsoft Office Specialist</a> (Excel 2019 associate) certification <p class="smalltext">certified in 25June,2023</p></li>
+        <li><a href="https://events.cpttm.org.mo/competition/197" target="_blank"> Macao Secondary Students Information Technology Knowledge Quiz Contest 2023 </a><p class="smalltext">finished in 11November,2023</p></li>
+        <li><a href="https://www.cpttm.org.mo/smta/certification-and-examination/mos/" target="_blank">Microsoft Office Specialist</a> Associate certification <p class="smalltext">certified in 23July,2023</p></li>
+        <li><a href="https://www.cpttm.org.mo/smta/certification-and-examination/mos/" target="_blank">Microsoft Office Specialist</a> PowerPoint 2019 certification <p class="smalltext">certified in 23July,2023</p></li>
+        <li><a href="https://www.cpttm.org.mo/smta/certification-and-examination/mos/" target="_blank">Microsoft Office Specialist</a> Excel 2019 Associate certification <p class="smalltext">certified in 25June,2023</p></li>
         <li><a href="https://apcs.csie.ntnu.edu.tw/" target="_blank">Advanced Placement Computer Science</a> (June 2023) <p class="smalltext">finished in 4June,2023</p></li>
-        <li><a href="https://macausteamedu.wixsite.com/steamedu" target="_blank">The 1st Macau Artificial Intelligence Innovation Challenge</a><p class="smalltext">finished in 26May,2023</p></li>
-        <li><a href="https://www.cpttm.org.mo/smta/certification-and-examination/mos/" target="_blank">Microsoft Office Specialist</a> (Word 2019 associate) certification <p class="smalltext">certified in 19March,2023</p></li>
-        <li><a href="https://www.cpttm.org.mo/smta/certification-and-examination/mos/" target="_blank">Microsoft Office Specialist</a> (Excel Expert 2019 associate) certification <p class="smalltext">certified in 15January,2023</p></li>
-        <li><a href="https://www.cpttm.org.mo/smta/certification-and-examination/mos/" target="_blank">Microsoft Office Specialist</a> (Word Expert 2019 associate) certification <p class="smalltext">certified in 14November,2022</p></li>
-        <li><a href="https://events.cpttm.org.mo/competition/164">The 9th Macao Secondary Students information Technology Knowledge Quiz Contest</a><p class="smalltext">finished in 12November,2022</p></li>
+        <li><a href="https://macausteamedu.wixsite.com/steamedu" target="_blank">The 1st Macao Artificial Intelligence Innovation Challenge</a><p class="smalltext">finished in 26May,2023</p></li>
+        <li><a href="https://www.cpttm.org.mo/smta/certification-and-examination/mos/" target="_blank">Microsoft Office Specialist</a> Word 2019 Associate certification <p class="smalltext">certified in 19March,2023</p></li>
+        <li><a href="https://www.cpttm.org.mo/smta/certification-and-examination/mos/" target="_blank">Microsoft Office Specialist</a> Expert certification <p class="smalltext">certified in 15January,2023</p></li>
+        <li><a href="https://www.cpttm.org.mo/smta/certification-and-examination/mos/" target="_blank">Microsoft Office Specialist</a> Excel 2019 Expert certification <p class="smalltext">certified in 15January,2023</p></li>
+        <li><a href="https://www.cpttm.org.mo/smta/certification-and-examination/mos/" target="_blank">Microsoft Office Specialist</a> Word 2019 Expert certification <p class="smalltext">certified in 14November,2022</p></li>
+        <li><a href="https://events.cpttm.org.mo/competition/164" target="_blank">The 9th Macao Secondary Students information Technology Knowledge Quiz Contest</a><p class="smalltext">finished in 12November,2022</p></li>
       </ul>
     </div>
 
